Refactored Customer module