@@ -2,8 +2,7 @@ package com.example.customer.configurations;
 
 import com.example.library.models.Customer;
 import com.example.library.repositories.CustomerRepository;
-import java.util.stream.Collectors;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -15,14 +14,10 @@ import org.springframework.stereotype.Service;
  * Custom UserDetailsService implementation for loading Customer details.
  */
 @Service
+@RequiredArgsConstructor
 public class CustomerServiceConfig implements UserDetailsService {
 
   private final CustomerRepository customerRepository;
-
-  @Autowired
-  public CustomerServiceConfig(CustomerRepository customerRepository) {
-    this.customerRepository = customerRepository;
-  }
 
   @Override
   public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
@@ -36,7 +31,8 @@ public class CustomerServiceConfig implements UserDetailsService {
       customer.getPassword(),
       customer.getRoles()
       .stream()
-      .map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList())
+      .map(role -> new SimpleGrantedAuthority(role.getName()))
+      .toList()
     );
   }
 }
