@@ -7,6 +7,7 @@ import com.example.library.repositories.OrderDetailRepository;
 import com.example.library.services.OrderDetailService;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -22,7 +23,7 @@ public class OrderDetailServiceImpl implements OrderDetailService {
   public List<OrderDetail> createOrderDetailsFromCartItems(Set<CartItem> cartItems, Order order) {
     List<OrderDetail> orderDetails = cartItems.stream()
         .map(item -> createOrderDetail(item, order))
-        .toList();
+        .collect(Collectors.toList());
 
     orderDetailRepository.saveAll(orderDetails);
     return orderDetails;
